<resources>
    <string name="app_name">BMSCE RESULT</string>
    <string name="edit_USN">USN</string>
    <string name="button_send">Enter</string>
    <string name="edit_name">Sem</string>
    <string name="subject_code">Subject</string>
    <string name="internal">CIE</string>
    <string name="external">SEE</string>
    <string name="total">Total</string>
    <string name="grade">Grade</string>
</resources>
