<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView36"
        app:layout_constraintStart_toEndOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView35"
        app:layout_constraintStart_toEndOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView37"
        app:layout_constraintStart_toEndOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView34"
        app:layout_constraintStart_toEndOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableDark"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableDark"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="TextView"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="TextView"
        android:textColor="#8BC34A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/tableDark"
        android:text="@string/subject_code"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="@string/internal"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="@string/external"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="@string/total"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="@string/grade"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
        app:layout_constraintStart_toEndOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        app:layout_constraintStart_toEndOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/tableLight"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableDark"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView23"
        app:layout_constraintStart_toEndOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableLight"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView33"
        app:layout_constraintStart_toEndOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableLight"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView31"
        app:layout_constraintStart_toEndOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableLight"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView30"
        app:layout_constraintStart_toEndOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="1dp"
        android:background="@color/tableLight"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView29"
        app:layout_constraintStart_toEndOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/tableLight"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableDark"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableDark"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:background="@color/tableLight"
        android:layout_marginStart="1dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView26"
        app:layout_constraintStart_toEndOf="@+id/textView26" />

</androidx.constraintlayout.widget.ConstraintLayout>